[package]
name = "amrust"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28.1", features = ["default"] }
egui = "0.28.1"

# For image support:
egui_extras = { version = "0.28.1", features = ["default", "image"] }

env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui_code_editor = "0.2.8"
threemf = { version = "0.5.0", path = "..\\3mf-rs" }
zip = "2.1.6"
anyhow = "1.0.86"
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = "1.0.*"
xml_dom = "0.2.8"
